---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, cond: bool) -> pub [u8; 31] {
    let byte_array: [u8; 31] = x.to_le_bytes();
    assert(byte_array.len() == 31);
    assert(Field::from_le_bytes::<31>(byte_array) == x);
    if cond {
        let bad_byte_array: [u8; 1] = x.to_le_bytes();
        assert(bad_byte_array.len() == 1);
    };
    byte_array
}
